# mamma_app

./: .gitignore  Dockerfile  README.md  config.ini  env.example  pyproject.toml
mamma_app/: __main__.py  app.py  file.py  model.py  neo_ws_service.py
tests/: conftest.py  test_app.py
